<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/helloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/parcebleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/helloTextView"
        android:text="Parcelable"/>

    <Button
        android:id="@+id/notificationsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Notifications"
        app:layout_constraintTop_toBottomOf="@id/parcebleButton"/>

    <Button
        android:id="@+id/pushNotificationsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Push Notifications"
        app:layout_constraintTop_toBottomOf="@id/notificationsButton"/>

    <Button
        android:id="@+id/contanctsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Contacts"
        app:layout_constraintTop_toBottomOf="@id/pushNotificationsButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>