<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">
    <Button
        android:id="@+id/navigateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Navigate"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/handlerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Handler"
        app:layout_constraintTop_toBottomOf="@id/navigateButton"/>
   <Button
       android:id="@+id/handlerButton"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="Start Handler"
       app:layout_constraintTop_toBottomOf="@id/handlerTextView"/>

</androidx.constraintlayout.widget.ConstraintLayout>